--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
 
   <link rel="shortcut icon" type="image/png" href="favicon.png" />
 
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?ceb74b08dc860b26c93bfdd388fd1eb4";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
 
 
 </head>
