--- a/rm.html
+++ b/rm.html
@@ -77,9 +77,9 @@
 
 
 <div class="wrapper case-section ">
-      <section class="case-cnt-right foo">
+      <section class="img-wrap img-margin foo">
   
-<img class="img-wrap foo" src="img/rm/RM-Banner.gif">
+<img class="img-wrap foo" src="img/rm/RM-protype.png">
 
     </section>
     </div>
