--- a/index.html
+++ b/index.html
@@ -14,15 +14,6 @@
 
   <link rel="shortcut icon" type="image/png" href="favicon.png" />
 
-<script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?ceb74b08dc860b26c93bfdd388fd1eb4";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
 
 
 </head>
@@ -88,7 +79,7 @@ Graphic Design and Front End Development base in
           <h4 class="company-title">RiManggis-Personalized eMarketing System </h4>
           <h5>UI Design</h5>
         </a>
-
+<!-- 
         <a href="tbb.html" class="project project-second foo">
           <div class="project-card wechat-container">
             <img class="project-logo" src="img/tbb-logo.png">
@@ -96,14 +87,23 @@ Graphic Design and Front End Development base in
           <h4 class="company-title">TianBaoBao </h4>
           <h5>UX & UI Design/Research</h5>
         </a>
-
+ -->
+      <a href="https://www.onesothebysrealty.com/"  target="_blank" class="project project-second foo">
+          <div class="project-card sotheby-container">
+            <img class="project-logo" src="img/soth-logo.png">
+          </div>
+          <h4 class="company-title">One Sotheby’s International Realty </h4>
+          <h5>UI & UX / BA Anlaysis</h5>
+        </a>
         <a href="gd.html" class="project project-third foo">
           <div class="project-card gd-container">
             <img class="project-logo" src="img/godiva-logo.png">
           </div>
           <h4 class="company-title">Godiva MiniProgram </h4>
-          <h5>UI Design / Web Fronted-end developer</h5>
+          <h5>UI Design </h5>
         </a>
+
+   
 
             
       </div>
