--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
     <main class="home">
 
       <h1 class="main-text">Hello, I’m Cedy. I’m a
-        <b>UI Designer</b> including
-Graphic Design and Front End Development base in
+        <b>UI Designer</b> base in
         <b>Guangzhou</b>. Nice to meet you.</h1>
 
       <a href="#projects-wrap" class="view-work">
