--- a/gd.html
+++ b/gd.html
@@ -64,7 +64,7 @@
             <li>
               <span>Role: </span> UI Designer</li>
             <li>
-              <span>Context: </span>UI Design / <br>Web Fronted-end developer</li>
+              <span>Context: </span>UI Design</li>
             <li>
               <span>Date: </span>March 2018</li>
           </ul>
