--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <span class="nav-hover-bg"></span>
           </li>-->
           <li>
-            <a href="mailto:Nancy_chw@outlook.com">
+            <a href="mailto:nancy_chw@outlook.com">
               Contact
             </a>
             <span class="nav-hover-bg"></span>
@@ -152,9 +152,9 @@
         <ul>
           <li>
           <i class="info-icon email-icon"></i>
-            <a href="mailto:Nancy_chw@outlook.com"  class="">
+            <a href="mailto:nancy_chw@outlook.com"  class="">
            
-            Nancy_chw@outlook.com</a>
+            nancy_chw@outlook.com</a>
             <span class="nav-hover-bg"></span>
           </li>
             <!--   <li>
