--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           <a href="index.html">
             <span class="logo-name">Nancy</span>
             <span class="logo-line"></span>
-            <span class="logo-text">The Designer</span>
+            <span class="logo-text">The Web Designer</span>
           </a>
         </h5>
 
